Multiple fixes to minor layout problems. Added box for linked campaigns on content page.

--- a/www/css/style_additions_new.css
+++ b/www/css/style_additions_new.css
@@ -430,11 +430,13 @@ p#replying_to {
 
 /* more from boxi */
 #content_view_user_related_container, 
-#content_view_related_content_container {
+#content_view_related_content_container,
+#content_view_related_campaign_container {
 	margin: 0 0 1em 0;
 }
 #content_view_user_related, 
-#content_view_content_related {
+#content_view_content_related,
+#content_view_campaign_related {
 	background:#ffffff none repeat scroll 0 0;
     border:1px solid #CCCCCC;
 	padding: 0.5em 0.5em;
@@ -471,7 +473,9 @@ p#replying_to {
 	border-left: 0.5em solid #ffc726;
 }
 
-#content_view_user_related_header,  #content_view_related_content_header {
+#content_view_user_related_header,  
+#content_view_related_content_header,
+#content_view_related_campaign_header {
 	height: 20px;
 	padding-top: 10px;
 	font-weight: bold;
@@ -975,38 +979,28 @@ form#send_privmsg_form input:focus, form#send_privmsg_form textarea:focus{ backg
 /** Color for easy coloring of some text */
 .light-gray { color: #C0C0C0; }
 
+/** Random sidebar things */
 #sidebar .box-user-content .box-bottom { padding-top: 10px; }
-#sidebar h2 a:hover { background: #F2F2F2; }
+#sidebar #campaigns ul.campaigns li:hover,
+#sidebar #campaigns ul.groups li:hover { background: #F2F2F2; cursor: pointer; }
 
-#content_view_related_content_header span, #content_view_user_related_header span { color: #C0C0C0; padding-left: 10px; }
+#sidebar ul.tags li.tags a:hover { background: #F2F2F2; }
+
+#content_view_related_content_header span, 
+#content_view_user_related_header span,
+#content_view_related_campaign_header span { color: #C0C0C0; padding-left: 10px; }
 
 .profile_image_mediumsize { height: 85px; width: 85px; }
 
-/** Admin tools page */
-/*
+/** Admin tools page 
+ *
  * Admin tools decorations
  */
- 
-#admin_comment_flags_table {
-	border: 1px solid #000;
-	border-spacing: 0px;
-	padding: 2px;
-	width: 100%;
-}
-#admin_comment_flags_table td {
-	padding: 2px;
-}
+#admin_comment_flags_table { border: 1px solid #000; border-spacing: 0px; padding: 2px; width: 100%; }
+#admin_comment_flags_table td { padding: 2px; }
+#admin_comment_flags_table #desc_tr { background-color: #ccc; color: #000; }
+#admin_comment_flags_table .desc_td_checkbox { width: 15px; }
+#admin_comment_flags_table .item_tr:nth-child(odd) { background-color: #eee; color: #000; }
 
-#admin_comment_flags_table #desc_tr {
-	background-color: #ccc;
-	color: #000;
-}
-
-#admin_comment_flags_table .desc_td_checkbox {
-	width: 15px;
-}
-
-#admin_comment_flags_table .item_tr:nth-child(odd) {
-	background-color: #eee;
-	color: #000;
-}
+#sidebar ul.campaigns li a { padding-left: 5px; }
+#sidebar ul.campaigns li { padding-bottom: 2px; }
